k8s/storage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clustergit-backend
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: "clustergit.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clustergit-backend
                port:
                  number: 80
    - host: "develop.clustergit.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clustergit-backend
                port:
                  number: 80
